--- a/index.html
+++ b/index.html
@@ -188,8 +188,8 @@
                 <p><strong>Διεύθυνση:</strong> Ισμήνης 4, Πυλαία Θεσσαλονίκης - 55535</p>
                 <p><strong>Διευθυντής:</strong> Παναγιώτης Δόμβρος</p>
                 <p><strong>Email:</strong> <a href="mailto:mail@1gym-pylaias.thess.sch.gr">mail@1gym-pylaias.thess.sch.gr</a></p>
-                <p><strong>Τηλέφωνο:</strong> 2310322232</p>
-                <p><strong>Ιστοσελίδα:</strong> <a href="https://1gym-pylaias.thess.sch.gr/" target="_blank">https://1gym-pylaias.thess.sch.gr/</a></p>
+                <p><strong>Τηλέφωνο:</strong> 2310 322232, <strong>Γραμματεία:</strong> 2310 322338</p>
+                <p><strong>Ιστοσελίδα:</strong> <a href="http://1gym-pylaias.thess.sch.gr/wordpress/" target="_blank">http://1gym-pylaias.thess.sch.gr/wordpress/</a></p>
             </div>
             <img src="qr.png" alt="QR Code για περισσότερες πληροφορίες" class="qr-code">
         </div>
@@ -260,7 +260,7 @@
             </tbody>
         </table>
         <p>Η κατανομή των μαθητών σε τμήματα καθορίζεται με βάση την αλφαβητική σειρά, σύμφωνα με την κείμενη νομοθεσία.</p>
-        <p><strong>ΦΕΚ, 10 Σεπτεμβρίου 2024, Αρ. Φύλλου 5130, Απόφαση υπ’ αριθμ.102791/ΓΔ:</strong></p>
+        <p><strong>ΦΕΚ, 10 Σεπτεμβρίου 2024, ΤΕΥΧΟΣ ΔΕΥΤΕΡΟ, Αρ. Φύλλου 5130, Απόφαση υπ’ αριθμ.102791/ΓΔ:</strong></p>
         <ul>
             <li><strong>Άρθρο 8/Β/Παρ. 1:</strong> Κατ’ εξαίρεση, πραγματοποιούνται εγγραφές τον Σεπτέμβριο πριν την έναρξη των μαθημάτων, σε χρονικό διάστημα που καθορίζεται με εγκύκλιο, σε λειτουργούντα τμήματα.</li>
             <li><strong>Άρθρο 11/ Παράγραφος 3:</strong> Αν ο αριθμός των μαθητών/τριών υπερβεί τις δυνατότητες στέγασης, ο/η αρμόδιος/α Διευθυντής/ντρια Δευτεροβάθμιας Εκπαίδευσης αίρει με επαρκώς δικαιολογημένη απόφασή του την υπεραριθμία με ταυτόχρονη υποχρεωτική μετεγγραφή ανάλογου αριθμού μαθητών/τριών. Κατά την αυτεπάγγελτη υποχρεωτική μετεγγραφή, λαμβάνονται υπόψη σχετικά χωροταξικά δεδομένα, καθώς και οι προτιμήσεις των γονέων/κηδεμόνων, χωρίς οι τελευταίες να είναι δεσμευτικές.</li>
@@ -356,7 +356,7 @@
         <p>Το διδακτικό έτος χωρίζεται σε 2 τετράμηνα και τα μαθήματα σε 3 ομάδες:</p>
         <ul>
             <li><strong>Α’ ομάδα (ΓΡΑΠΤΩΣ ΕΞΕΤΑΖΟΜΕΝΑ):</strong> Αρχαία Ελληνική Γλώσσα και Γραμματεία, Νεοελληνική Γλώσσα και Γραμματεία, Μαθηματικά, Φυσική και Ιστορία, Αγγλικά και Βιολογία.</li>
-            <li><strong>Β’ ομάδα:</strong> Χημεία, Βιολογία, Γεωγραφία, Κοινωνική και Πολιτική Αγωγή, Θρησκευτικά, Γαλλικά, Γερμανικά, Οικιακή Οικονομία και Εργαστήρια Δεξιοτήτων, Πληροφορική, Τεχνολογία.</li>
+            <li><strong>Β’ ομάδα:</strong> Χημεία, Γεωγραφία, Κοινωνική και Πολιτική Αγωγή, Θρησκευτικά, Γαλλικά, Γερμανικά, Οικιακή Οικονομία και Εργαστήρια Δεξιοτήτων, Πληροφορική, Τεχνολογία.</li>
             <li><strong>Γ’ ομάδα:</strong> Μουσική, Καλλιτεχνικά και Φυσική Αγωγή.</li>
         </ul>
         <p>Τελική βαθμολογία για τα μαθήματα της Α’ ομάδας είναι ο Μέσος Όρος των 2 τετραμήνων και της γραπτής εξέτασης. Για τα μαθήματα της Β’ και Γ’ ομάδας, είναι ο Μέσος Όρος των 2 τετραμήνων.</p>
@@ -395,15 +395,16 @@
     <button class="collapsible">Οι εκπαιδευτικοί και το προσωπικό του σχολείου μας</button>
     <div class="content">
         <ul>
-            <li><strong>Θεολόγοι:</strong> Κερασαρίδης Ευστάθιος, Στρογγυλή Αναστασία</li>
+            <li><strong>Θεολόγοι:</strong> Κερασαρίδης Ευστάθιος, Στρογγύλη Αναστασία</li>
             <li><strong>Φιλόλογοι:</strong> Αϊνατζή Παναγιώτα, Αμοιραδάκη Αναστασία, Βερεσόγλου Αικατερίνη, Γαζέτη Θεοδώρα (Ειδικής Αγωγής), Δελή Αγάπη, Κυριαζοπούλου Ευαγγελία, Μαγγλάρη Σοφία (Ειδικής Αγωγής), Μανδραλή Ειρήνη, Μαρινούδη Θεοδοσία (Ειδικής Αγωγής), Ντούμα Λευκοθέα, Παπανικολάου Ευγενία</li>
-            <li><strong>Μαθηματικοί:</strong> Βασιλειάδου Μαρία, Κοκκίνη Ελένη, Λαφαζάνης Ανδρέας (Μαθηματικά, Φυσική), Μπoνού Σοφία, Τζούγγαρη Ευδοκία (Ειδικής Αγωγής)</li>
+            <li><strong>Μαθηματικοί:</strong> Βασιλειάδου Μαρία, Κοκκίνη Ελένη, Λαφαζάνης Ανδρέας (Μαθηματικά, Φυσική), Μπόνου Σοφία, Τζούγγαρη Ευδοκία (Ειδικής Αγωγής)</li>
             <li><strong>Φυσικοί, Χημικοί, Βιολόγοι, Γεωλόγοι:</strong> Αραπίδου Μαγδαληνή (Φυσικός), Καλίτση Αικατερίνη (Γεωλόγος – Γεωγραφία, Φυσική), Στίγγας Στυλιανός (Χημικός Μηχανικός), Συροπούλου Έλενα (Βιολόγος – Βιολογία, Χημεία), Τυφλοπούλου Άννα (Χημικός – Ειδικής Αγωγής)</li>
             <li><strong>Αγγλικής Φιλολογίας:</strong> Βασιλικού Φανή, Δημηνά Λεμονιά (Ιστορία – Αγγλικά), Δόμβρος Παναγιώτης (Ιστορία – Αγγλικά)</li>
             <li><strong>Γαλλικής Φιλολογίας:</strong> Αμανατιάδου Ελένη (σε άδεια)</li>
-            <li><strong>Γερμανικής Φιλολογίας:</strong> Κάλφα Μαρία, Ιωαννίδou Δέσποινα, Καζαντζίδου Ευανθία, Πατκού Ευδοξία</li>
+            <li><strong>Γερμανικής Φιλολογίας:</strong> Κάλφα Μαρία</li>
             <li><strong>Τεχνολογίας:</strong> Στίγγας Στυλιανός, Τσουκαλά Γαβριέλα</li>
-            <li><strong>Φυσικής Αγωγής:</strong> Μπογιάτζη Ευδοκία, Ταμπουράτζης Σταύρος</li>
+            <li><strong>Πληροφορικής:</strong> Ιωαννίδου Δέσποινα, Καζαντζίδου Ευανθία, Πάτκου Ευδοξία</li>
+            <li><strong>Φυσικής Αγωγής:</strong> Μπογιατζή Ευδοκία, Ταμπουρατζής Σταύρος</li>
             <li><strong>Οικονομίας:</strong> Πέρτσης Αναστάσιος (ΚΠΑ – Οικονομικά)</li>
             <li><strong>Κοινωνικής και Πολιτικής Αγωγής:</strong> Σικαρίδου Αναστασία (Οικιακή Οικονομία – Ιστορία)</li>
             <li><strong>Μουσικής:</strong> Τσαϊρέλη Ανδρονίκη</li>
@@ -436,7 +437,7 @@
         <ul>
             <li>Γ1 → Μανδραλή Ειρήνη</li>
             <li>Γ2 → Κοκκίνη Ελένη</li>
-            <li>Γ3 → Πέρτσης Αναστάσios</li>
+            <li>Γ3 → Πέρτσης Αναστάσιος</li>
             <li>Γ4 → Στίγγας Στυλιανός</li>
             <li>Γ5 → Αμοιραδάκη Αναστασία</li>
         </ul>
